Fixed card size on small screen devices

--- a/src/style/recipeCard.scss
+++ b/src/style/recipeCard.scss
@@ -1,4 +1,5 @@
 .fullCard {
+    max-width: 90vw;
     xheight: 32rem;
     width: 25rem;
 }
